new http client, supports batching of requests